fix: add overflow to creatorWrapper

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,5 +1,5 @@
 .layout {
   max-width: 1340px;
   width: 100%;
-  margin: auto;
+  margin: 0 auto;
 }
