--- a/src/components/organisms/headingPage/HeadingPage.module.scss
+++ b/src/components/organisms/headingPage/HeadingPage.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
   position: relative;
   margin: 7em auto auto auto;
+  width: 100%;
   .fourCardsWrapper {
     position: relative;
     top: 45em;
